--- a/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo-provider/src/main/resources/application.properties
@@ -10,6 +10,20 @@ spring.datasource.url=jdbc:mysql://192.168.33.97:33061/test?characterEncoding=ut
 spring.datasource.username=root
 spring.datasource.password=hundsun123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+# 初始化大小，最小，最大
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+# 配置获取连接等待超时的时间
+spring.datasource.maxWait=60000
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+#Druid Monitor允许登陆的IP地址  http://127.0.0.1:8080/druid/login.html
+druid.allow.ip=127.0.0.1
+druid.login.password=root
+druid.login.user_name=root
+
 
 #mybatis配置
 mybatis.mapper-locations=classpath:mapper/*.xml
