--- a/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo-provider/src/main/resources/application.properties
@@ -28,3 +28,5 @@ druid.login.user_name=root
 #mybatis配置
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.hundsun.domain
+
+spring.aop.proxy-target-class=true
