--- a/dubbo-consumer/src/main/resources/application.properties
+++ b/dubbo-consumer/src/main/resources/application.properties
@@ -2,8 +2,11 @@
 server.port=8081
 
 ## Dubbo 服务消费者配置
-spring.dubbo.application.name=consumer
-spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
-spring.dubbo.protocol.name=dubbo
-spring.dubbo.protocol.port=20880
-spring.dubbo.scan=com.hundsun.service
+#spring.dubbo.application.name=consumer
+#spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
+#spring.dubbo.protocol.name=dubbo
+#spring.dubbo.protocol.port=20880
+
+spring.dubbo.application.name=dubbo-consumer
+spring.dubbo.application.registry=zookeeper://127.0.0.1:2181
+
